2008-04-03  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* timezone.glade: remove timezone.glade, unused now.

2008-04-03  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (update_calendar_popup): nullify a widget pointer when
	closing the popup. Should fix bug #525754, where the destroyed widget
	was used.

2008-04-03  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (update_timezone): if the coordinates are known to not be
	valid, just empty the timezone selection
	(run_find_location_save): updated to pass a new argument to
	update_timezone()
	Fix crash bug #522438

2008-04-02  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: (clock_map_expose): correctly redraw the map outline in
	expose event, instead of painting it inside the map. Fix bug #519246.
	Patch by Matthias Clasen <mclasen@redhat.com>

2008-04-02  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: updated
	* e-map/Makefile.am:
	* e-map/e-map-marshal.list:
	* e-map/e-map.c:
	* e-map/e-map.h:
	* tz-list.c:
	* tz-list.h:
	* tz-sel-dialog.c:
	* tz-sel-dialog.h:
	* tz-window.c:
	* tz-window.h:
	* tz.c:
	* tz.h: Remove all those files that aren't used anymore.

2008-04-02  Vincent Untz  <vuntz@gnome.org>

	Clean things a bit. It's easier to have one function call instead of
	always the same three calls.

	* clock-map.c: (clock_map_refresh):
	(highlight):
	(clock_map_update_time): don't call clock_map_render_shadow() and
	clock_map_rotate()
	(clock_map_display): add those calls here.

2008-04-02  Vincent Untz  <vuntz@gnome.org>

	Fix crash when closing the clock window while a city is blinking on the
	map. Fix bug #519493.
	Also improve things a bit if you click quickly on two cities.

	* clock-map.c: (clock_map_init): add a timeout id for the blinking
	(clock_map_finalize): stop blinking. This fixes the crash
	(highlight): simplify a bit because of the destroy handler
	(highlight_destroy): new, destroy handler for the timeout
	(clock_map_blink_location): if there was already something blinking,